got different join/quit scenarios under control
Took 1 hour 52 minutes